--- a/p20.html
+++ b/p20.html
@@ -35,7 +35,7 @@
     <div class="container">
         <nav class="navbar navbar-expand p-0">
             <a class="navbar-brand mr-0 pr-4" href="index.html">
-                <img src="image/logo.jpeg" alt="SCRO">
+                <img src="new_logo.png" alt="SCRO">
             </a>
             <div class="navbar-collapse nav-sec" id="sidenav">
                 <ul class="navbar-nav mr-auto header-nav">
@@ -69,12 +69,6 @@
                             BLOG
                         </a>
                     </li>                    
-
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="#contact">
-                            Contact
-                        </a>
-                    </li>
 
                 </ul>
                 </div>
@@ -115,55 +109,55 @@
 </section>
 
 <footer class="site-footer">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-12 col-md-6">
-          <h6>SCRO</h6>
-          <p class="text-justify"> <a href="index.html">STUDENT COPTER RESEARCH ORGANIZATION</a></p>
-        </div>
-
-        <div class="col-xs-6 col-md-3">
-          <h6 id="contact">FIND US</h6>
-          <ul class="footer-links">
-            <li><a href="#">SCRO LAB, 601, Basic Engineering Lab, SRM University, Kattankulathur- 603203</a></li>
-            <br>
-            <li><a href="#">91-8248000720</a></li>
-            <br>
-            <li><a href="#">copters.scro@gmail.com</a></li>
-          </ul>
-        </div>
-
-        <div class="col-xs-6 col-md-3">
-          <h6>Quick Links</h6>
-          <ul class="footer-links">
-            <li><a href="index.html">HOME</a></li>
-            <li><a href="aboutus.html">ABOUT US</a></li>
-            <li><a href="team.html">TEAM</a></li>
-            <li><a href="project.html">PROJECT</a></li>
-          </ul>
-        </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12 col-md-6">
+        <h6>SCRO</h6>
+        <p class="text-justify">STUDENT COPTER RESEARCH ORGANIZATION</p>
       </div>
-      <hr>
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-8 col-sm-6 col-xs-12">
-          <p class="copyright-text">Copyright &copy; 2020 All Rights Reserved by SCR0
-       <P>DESIGNED BY <a href="https://www.linkedin.com/in/hrishita-singh/">HRISHITA</a></P>
-          </p>
-        </div>
 
-        <div class="col-md-4 col-sm-6 col-xs-12">
-          <ul class="social-icons">
-            <li><a class="facebook" href="https://www.facebook.com/srmscro/"><i class="fa fa-facebook"></i></a></li>
-            <li><a class="twitter" href="instagram.com/srm_scro"><i class="fa fa-instagram"></i></a></li>
-            <li><a class="github" href="https://github.com/SRMSCRO"><i class="fa fa-github"></i></a></li>
-            <li><a class="medium" href="http://medium.com/@srmscro"><i class="fa fa-medium"></i></a></li>
-            <li><a class="linkedin" href="https://www.linkedin.com/company/srmscro/"><i class="fa fa-linkedin"></i></a></li>   
-          </ul>
-        </div>
+      <div class="col-xs-6 col-md-3">
+        <h6 id="contact">FIND US</h6>
+        <ul class="footer-links">
+          <li>SCRO LAB, 601, Basic Engineering Lab, SRM University, Kattankulathur- 603203</li>
+          <br>
+          <li><a href="mailto:communications@srmscro.com">communications@srmscro.com</a></li>
+        </ul>
+      </div>
+
+      <div class="col-xs-6 col-md-3">
+        <h6>Quick Links</h6>
+        <ul class="footer-links">
+          <li><a href="index.html">HOME</a></li>
+          <li><a href="aboutus.html">ABOUT US</a></li>
+          <li><a href="team.html">TEAM</a></li>
+          <li><a href="project.html">PROJECT</a></li>
+        </ul>
       </div>
     </div>
+    <hr>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8 col-sm-6 col-xs-12">
+        <p class="copyright-text">Copyright &copy; 2020 All Rights Reserved by SCR0
+    
+        </p>
+      </div>
+
+      <div class="col-md-4 col-sm-6 col-xs-12">
+        <ul class="social-icons">
+          <li><a class="twitter" href="https://twitter.com/srmscro"><i class="fa fa-twitter"></i></a></li>
+          <li><a class="facebook" href="https://www.facebook.com/srmscro/"><i class="fa fa-facebook"></i></a></li>
+          <li><a class="twitter" href="https://www.instagram.com/srmscro/"><i class="fa fa-instagram"></i></a></li>
+          <li><a class="github" href="https://github.com/SRMSCRO"><i class="fa fa-github"></i></a></li>
+          <li><a class="medium" href="https://medium.com/srmscro"><i class="fa fa-medium"></i></a></li>
+          <li><a class="linkedin" href="https://www.linkedin.com/company/srmscro"><i class="fa fa-linkedin"></i></a></li>  
+
+        </ul>
+      </div>
+    </div>
+  </div>
 </footer>
 
 
