--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <ul class="row">
                 <li class="col-sm-6 col-lg-3" data-aos="fade-up" data-aos-duration="1000">
                     <div class="index-abt-content">
-                        <h3>Image Processing</h3>
+                        <h3>Computer Vision</h3>
                         <p>Image Processing means processing digital image by means of a digital
                            computer. In our domain, we get raw images as input from the drones
                            and process them to get the desired output.</p>
@@ -141,7 +141,7 @@
                 </li>
                 <li class="col-sm-6 col-lg-3" data-aos="fade-up" data-aos-duration="1400">
                     <div class="index-abt-content">
-                        <h3>Electronics</h3>
+                        <h3>Flight Systems</h3>
                         <p>
                              The motors and propellers are the drone technology, 
                             which move the UAV into the air and to fly in any direction or hover.
@@ -288,7 +288,7 @@
 
         <div class="col-md-4 col-sm-6 col-xs-12">
           <ul class="social-icons">
-            <li><a class="twitter" href="https://twitter.com/srmscro"><i class="fa fa-twitter"></i></a></li>
+            <li><a class="twitter" href="https://twitter.com/srmscro "><i class="fa fa-twitter"></i></a></li>
             <li><a class="facebook" href="https://www.facebook.com/srmscro/"><i class="fa fa-facebook"></i></a></li>
             <li><a class="twitter" href="https://www.instagram.com/srmscro/"><i class="fa fa-instagram"></i></a></li>
             <li><a class="github" href="https://github.com/SRMSCRO"><i class="fa fa-github"></i></a></li>
